# 6uo_scope

./: CMakeLists.txt  DefineOptions.cmake  README.md
6uo_scope/: 6uo_scope.c  6uo_scope.h  CMakeLists.txt
misc/: Rigol_DS2000_SCPI_Commands.txt  cmds.txt  plot.py
